--- a/food.html
+++ b/food.html
@@ -4,7 +4,7 @@
         <!--style="font-family: 'Space Mono', monospace;" py-5 text-center-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nature</title>
+        <title>Food</title>
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/all.min.css">
@@ -17,28 +17,25 @@
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
     </div>
     <div class="gallery-title">
-        <h1 class="text-center">Naturaleza</h1>
+        <h1 class="text-center">Comida</h1>
     </div>
 
     <div class="container-fluid text-center ">
-        <div class="gallery gallery-nature">
+        <div class="gallery gallery-food">
             <figure class="gallery__item gallery__item--1">
-                <img src="img/nature/4.jpg" class="gallery__img" alt="Image 1">
+                <img src="img/food/2.jpg" class="gallery__img" alt="Image 1">
             </figure>
             <figure class="gallery__item gallery__item--2">
-                <img src="img/nature/2.jpg" class="gallery__img" alt="Image 2">
+                <img src="img/food/1.jpg" class="gallery__img" alt="Image 2">
             </figure>
             <figure class="gallery__item gallery__item--3">
-                <img src="img/nature/3.jpg" class="gallery__img" alt="Image 3">
+                <img src="img/food/3.jpg" class="gallery__img" alt="Image 3">
             </figure>
             <figure class="gallery__item gallery__item--4">
-                <img src="img/nature/1.jpg" class="gallery__img" alt="Image 4">
+                <img src="img/food/4.jpg" class="gallery__img" alt="Image 4">
             </figure>
             <figure class="gallery__item gallery__item--5">
-                <img src="img/nature/5.jpeg" class="gallery__img" alt="Image 5">
-            </figure>
-            <figure class="gallery__item gallery__item--6">
-                <img src="img/nature/6.jpg" class="gallery__img" alt="Image 6">
+                <img src="img/food/5.jpg" class="gallery__img" alt="Image 6">
             </figure>
         </div>
     </div>
