Now images can expand on click

--- a/city.html
+++ b/city.html
@@ -13,32 +13,43 @@
         
     </head>
 <body>
+    <!--Boton de volver-->
     <div class="back-btn">
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+    </div>
+    <!--Boton de DarkMode-->
+    <div class="toggle-btn toggle-btn-gallery">
+        <i class="fas fa-adjust"></i>
     </div>
     <div class="gallery-title">
         <h1 class="text-center">Ciudad</h1>
     </div>
-
+    <!--Galeria-->
     <div class="container-fluid text-center ">
         <div class="gallery gallery-city">
-            <figure class="gallery__item gallery__item--1">
+            <div class="gallery__item gallery__item--1">
                 <img src="img/city/5.jpg" class="gallery__img" alt="Image 1">
-            </figure>
-            <figure class="gallery__item gallery__item--2">
+            </div>
+            <div class="gallery__item gallery__item--2">
                 <img src="img/city/6.jpg" class="gallery__img" alt="Image 2">
-            </figure>
-            <figure class="gallery__item gallery__item--3">
+            </div>
+            <div class="gallery__item gallery__item--3">
                 <img src="img/city/7.jpg" class="gallery__img" alt="Image 3">
-            </figure>
-            <figure class="gallery__item gallery__item--4">
+            </div>
+            <div class="gallery__item gallery__item--4">
                 <img src="img/city/8.jpg" class="gallery__img" alt="Image 4">
-            </figure>
-            <figure class="gallery__item gallery__item--6">
+            </div>
+            <div class="gallery__item gallery__item--5">
                 <img src="img/city/1.jpg" class="gallery__img" alt="Image 6">
-            </figure>
+            </div>
         </div>
     </div>
+    <div class="modal1">
+        <img src="" alt="full-img" class="full-img">
+        <p class="caption"></p>
+    </div>
+
+
 
     <footer id="footer"  class="page-footer font-small blue">
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
