--- a/food.html
+++ b/food.html
@@ -13,31 +13,40 @@
         
     </head>
 <body>
-    <div class="back-btn">
+    <!--Boton de volver-->
+    <div class="back-btn btn1">
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
     </div>
-    <div class="gallery-title">
-        <h1 class="text-center">Comida</h1>
+    <!--Boton de DarkMode-->
+    <div class="toggle-btn toggle-btn-gallery btn1 ">
+        <i class="fas fa-adjust"></i>
     </div>
-
+    <div class="gallery-title ">
+        <h1 class="text-center">Ciudad</h1>
+    </div>
+    <!--Galeria-->
     <div class="container-fluid text-center ">
         <div class="gallery gallery-food">
-            <figure class="gallery__item gallery__item--1">
+            <div class="gallery__item gallery__item--1">
                 <img src="img/food/2.jpg" class="gallery__img" alt="Image 1">
-            </figure>
-            <figure class="gallery__item gallery__item--2">
+            </div>
+            <div class="gallery__item gallery__item--2">
                 <img src="img/food/1.jpg" class="gallery__img" alt="Image 2">
-            </figure>
-            <figure class="gallery__item gallery__item--3">
+            </div>
+            <div class="gallery__item gallery__item--3">
                 <img src="img/food/3.jpg" class="gallery__img" alt="Image 3">
-            </figure>
-            <figure class="gallery__item gallery__item--4">
+            </div>
+            <div class="gallery__item gallery__item--4">
                 <img src="img/food/4.jpg" class="gallery__img" alt="Image 4">
-            </figure>
-            <figure class="gallery__item gallery__item--5">
+            </div>
+            <div class="gallery__item gallery__item--5">
                 <img src="img/food/5.jpg" class="gallery__img" alt="Image 6">
-            </figure>
+            </div>
         </div>
+    </div>
+    <div class="modal1">
+        <img src="" alt="full-img" class="full-img">
+        <p class="caption"></p>
     </div>
 
     <footer id="footer"  class="page-footer font-small blue">
