--- a/nature.html
+++ b/nature.html
@@ -13,34 +13,43 @@
         
     </head>
 <body>
+    <!--Boton de volver-->
     <div class="back-btn">
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
     </div>
-    <div class="gallery-title">
-        <h1 class="text-center">Naturaleza</h1>
+    <!--Boton de DarkMode-->
+    <div class="toggle-btn toggle-btn-gallery">
+        <i class="fas fa-adjust"></i>
     </div>
-
+    <div class="gallery-title">
+        <h1 class="text-center">Ciudad</h1>
+    </div>
+    <!--Galeria-->
     <div class="container-fluid text-center ">
         <div class="gallery gallery-nature">
-            <figure class="gallery__item gallery__item--1">
+            <div class="gallery__item gallery__item--1">
                 <img src="img/nature/4.jpg" class="gallery__img" alt="Image 1">
-            </figure>
-            <figure class="gallery__item gallery__item--2">
+            </div>
+            <div class="gallery__item gallery__item--2">
                 <img src="img/nature/2.jpg" class="gallery__img" alt="Image 2">
-            </figure>
-            <figure class="gallery__item gallery__item--3">
+            </div>
+            <div class="gallery__item gallery__item--3">
                 <img src="img/nature/3.jpg" class="gallery__img" alt="Image 3">
-            </figure>
-            <figure class="gallery__item gallery__item--4">
+            </div>
+            <div class="gallery__item gallery__item--4">
                 <img src="img/nature/1.jpg" class="gallery__img" alt="Image 4">
-            </figure>
-            <figure class="gallery__item gallery__item--5">
-                <img src="img/nature/5.jpeg" class="gallery__img" alt="Image 5">
-            </figure>
-            <figure class="gallery__item gallery__item--6">
+            </div>
+            <div class="gallery__item gallery__item--5">
+                <img id="myImg" src="img/nature/5.jpeg" class="gallery__img" alt="Image 5">
+            </div>
+            <div class="gallery__item gallery__item--6">
                 <img src="img/nature/6.jpg" class="gallery__img" alt="Image 6">
-            </figure>
+            </div>
         </div>
+    </div>
+    <div class="modal1">
+        <img src="" alt="full-img" class="full-img">
+        <p class="caption"></p>
     </div>
 
     <footer id="footer"  class="page-footer font-small blue">
