--- a/nature.html
+++ b/nature.html
@@ -22,7 +22,7 @@
         <i class="fas fa-adjust"></i>
     </div>
     <div class="gallery-title">
-        <h1 class="text-center">Ciudad</h1>
+        <h1 class="text-center">Naturaleza</h1>
     </div>
     <!--Galeria-->
     <div class="container-fluid text-center ">
